fix color and overflow

--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -441,6 +441,7 @@ details {
     margin-bottom: 20px;
     font-size: 15px;
     margin-top: 15px;
+    overflow-wrap: anywhere;
 }
 
 em {
